fix card directive - pricing drops line when name too long

--- a/client/styles/_variables.scss
+++ b/client/styles/_variables.scss
@@ -1,8 +1,12 @@
-////////////////  Global colors  ///////////////////////////////////////////////////////
+////////////////  Global colors  //////////////////////////////////////////////////////
 $color-primary: #52b1b9;
 $color-secondary: #eb6151;
 $bg-color: #f2f2f6;
 $footer-color: #3d464d;
+
+////////////////  fonts  //////////////////////////////////////////////////////////////
+$font-weight-regular: 400; 
+$font-weight-bold: 600; 
 
 ////////////////  Header  /////////////////////////////////////////////////////////////
 $main-header-height: 65px;
